<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:contentDescription="@string/pruebaDescripcionImagen"
        android:id="@+id/iImagen"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/barra"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:id="@+id/tId"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/pruebaId"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/iImagen" />

    <TextView
        android:id="@+id/tPan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pruebaNombreBebida"
        android:textColor="@color/colorPrimary"
        android:layout_toRightOf="@+id/iImagen"
        android:layout_toEndOf="@+id/iImagen" />

    <TextView
        android:id="@+id/tTamano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pruebaTamano"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/iImagen"
        android:layout_toEndOf="@+id/iImagen"
        android:layout_below="@+id/tPan" />

    <TextView
        android:id="@+id/tComplemento"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:text="@string/pruebaAperativo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/iImagen"
        android:layout_toEndOf="@+id/iImagen"
        android:layout_below="@+id/tTamano" />

    <TextView
        android:id="@+id/tUnidades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pruebaUnidades"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/iImagen"
        android:layout_toEndOf="@+id/iImagen"
        android:layout_below="@+id/tComplemento" />

    <TextView
        android:id="@+id/tPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pruebaPrecio"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/iImagen"
        android:layout_toEndOf="@+id/iImagen"
        android:layout_below="@+id/tUnidades" />

    <ImageButton
        android:id="@+id/borrarItem"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/botonborrar"
        android:contentDescription="@string/pruebaDescripcionBoton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toLeftOf="@+id/tComplemento"
        android:layout_toStartOf="@+id/tComplemento"
        android:layout_below="@+id/tPan"
        android:layout_marginRight="0dp"
        android:layout_marginEnd="0dp"/>

</RelativeLayout>