<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:id="@+id/llPrincipal"
    android:orientation="vertical"
    android:divider="?android:dividerHorizontal"
    android:showDividers="middle">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:typeface="monospace"
        android:layout_gravity="center"
        android:divider="?android:dividerHorizontal"
        android:text="@string/tituloMain"
        android:id="@+id/textView"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/sp1"
            android:layout_height="wrap_content"
            android:layout_width="210dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp" />

        <ImageView
            android:contentDescription="@string/descripcionImagen"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:background="@drawable/barra"/>

    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:id="@+id/grupoRadio">

        <RadioButton
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="sans"
            android:checked="true"
            android:text="@string/tamano1"
            android:id="@+id/rb1"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp" />

        <RadioButton
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="sans"
            android:text="@string/tamano2"
            android:id="@+id/rb2" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoCheck1"
            android:typeface="sans"
            android:id="@+id/cbPapas"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp" />

        <CheckBox
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoCheck2"
            android:typeface="sans"
            android:id="@+id/cbAceitunas"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"/>

        <CheckBox
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoCheck3"
            android:typeface="sans"
            android:id="@+id/cbCacahuetes"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/textoHintUnidades"
        android:inputType="numberDecimal"
        android:id="@+id/etUnidades"
        android:layout_marginBottom="20dp"/>

    <Button
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/textoBotonPedir"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:typeface="sans"
        android:id="@+id/btPedir" />

</LinearLayout>